Parser evaluator and bbox separation

--- a/scanner/evaluators/CMakeLists.txt
+++ b/scanner/evaluators/CMakeLists.txt
@@ -8,7 +8,8 @@ if (BUILD_CAFFE_EVALUATORS)
     list(APPEND SOURCE_FILES
       caffe/vgg/vgg_cpu_input_transformer.cpp
       caffe/yolo/yolo_cpu_input_transformer.cpp
-      caffe/facenet/facenet_cpu_input_transformer.cpp)
+      caffe/facenet/facenet_cpu_input_transformer.cpp
+      caffe/facenet/facenet_parser_evaluator.cpp)
     if (CUDA_FOUND)
       list(APPEND SOURCE_FILES
         caffe/facenet/facenet_gpu_input_transformer.cpp)
