--- a/scanner/parsers/CMakeLists.txt
+++ b/scanner/parsers/CMakeLists.txt
@@ -4,7 +4,8 @@ if (BUILD_SERVER)
   list(APPEND SOURCE_FILES
     imagenet_parser.cpp
     yolo_parser.cpp
-    facenet_parser.cpp)
+    facenet_parser.cpp
+    bbox_parser.cpp)
 endif()
 
 add_library(parsers OBJECT
