Working face tracking with facenet

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ project(Scanner)
 option(BUILD_IMAGE_PROCESSING_EVALUATORS "" OFF)
 option(BUILD_CAFFE_EVALUATORS "" OFF)
 option(BUILD_CAFFE_INPUT_TRANSFORMERS "" OFF)
-option(BUILD_MOVIE_ANALYSIS_EVALUATORS "" ON)
+option(BUILD_MOVIE_ANALYSIS_EVALUATORS "" OFF)
 option(BUILD_TRACKER_EVALUATORS "" OFF)
 option(BUILD_UTIL_EVALUATORS "" ON)
 option(BUILD_SERVER "" OFF)
