Make nvidia decoder compile, but not work
Seeing a weird hang when running the nvidia hardware decoder.
Their reference samples are also hanging so this seems to be an issue
with the library rather than our use of it.

--- a/scanner/video/CMakeLists.txt
+++ b/scanner/video/CMakeLists.txt
@@ -1,7 +1,8 @@
 set(SOURCE_FILES
   video_decoder.cpp)
 
-if (HAVE_CUDA)
+if (CUDA_FOUND)
+  add_definitions(-DHAVE_NVIDIA_VIDEO_HARDWARE)
   list(APPEND SOURCE_FILES
     nvidia/nvidia_video_decoder.cpp)
 endif()
