Change serialization to use protobuf

--- a/comparison/caffe/CMakeLists.txt
+++ b/comparison/caffe/CMakeLists.txt
@@ -5,7 +5,8 @@ if (BUILD_CAFFE_EVALUATORS)
   add_executable(caffe_throughput
     main.cpp
     $<TARGET_OBJECTS:evaluators>
-    $<TARGET_OBJECTS:util>)
+    $<TARGET_OBJECTS:util>
+    ${PROTO_SRCS})
 
   target_link_libraries(caffe_throughput
     "${LIBRARIES}"
