--- a/comparison/opencv/CMakeLists.txt
+++ b/comparison/opencv/CMakeLists.txt
@@ -5,6 +5,7 @@ set(LIBRARIES
 if(HAVE_CUDA AND HAVE_OPENCV) 
   add_executable(opencv_compare
     main.cpp
+    ${PROTO_SRCS}
     $<TARGET_OBJECTS:util>)
 
   target_link_libraries(opencv_compare
