--- a/scanner/evaluators/CMakeLists.txt
+++ b/scanner/evaluators/CMakeLists.txt
@@ -1,5 +1,18 @@
 set(SOURCE_FILES)
 
+protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS
+  types.proto)
+
+list(APPEND SOURCE_FILES
+  ${PROTO_SRCS})
+
+# add_custom_target(proto_files DEPENDS ${PROTO_HDRS})
+
+# function(add_library targetName)
+#   _add_library(${targetName} ${ARGN})
+#   add_dependencies(${targetName} proto_files)
+# endfunction()
+
 if (BUILD_CAFFE_EVALUATORS)
   list(APPEND SOURCE_FILES
     caffe/net_descriptor.cpp
