--- a/features/yolo.toml
+++ b/features/yolo.toml
@@ -14,9 +14,9 @@
             "width",
         ]
         channel_ordering = [
-            "blue"
-            "green"
-            "red"
+            "blue",
+            "green",
+            "red",
         ]
 
 [mean-image]
