--- a/scanner/evaluators/CMakeLists.txt
+++ b/scanner/evaluators/CMakeLists.txt
@@ -27,6 +27,7 @@ if (BUILD_CAFFE_EVALUATORS)
     list(APPEND SOURCE_FILES
       caffe/vgg/vgg_cpu_input_transformer.cpp
       caffe/yolo/yolo_input_evaluator.cpp
+      caffe/squeezenet/squeezenet_input_evaluator.cpp
       caffe/facenet/facenet_parser_evaluator.cpp
       caffe/facenet/facenet_input_evaluator.cpp)
   endif()
@@ -39,11 +40,12 @@ endif()
 
 if (BUILD_MOVIE_ANALYSIS_EVALUATORS)
   list(APPEND SOURCE_FILES
-    movie_analysis/movie_evaluator.cpp
-    movie_analysis/histogram_evaluator.cpp
-    movie_analysis/face_evaluator.cpp
+    # movie_analysis/movie_evaluator.cpp
+    # movie_analysis/histogram_evaluator.cpp
+    # movie_analysis/face_evaluator.cpp
     movie_analysis/optical_flow_evaluator.cpp
-    movie_analysis/camera_motion_evaluator.cpp)
+    #movie_analysis/camera_motion_evaluator.cpp)
+    )
 endif()
 
 if (BUILD_TRACKER_EVALUATORS)
