--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,19 @@ sudo: required
 language: cpp
 
 services:
-  - docker
+- docker
 
 before_install:
-  - docker build -t wcrichto/scanner docker/ubuntu16.04-cuda8.0-cv3.1.0
-  - docker run wcrichto/scanner /bin/bash -c "echo 'nice'"
+- openssl aes-256-cbc -K $encrypted_f836c174cc56_key -iv $encrypted_f836c174cc56_iv
+  -in .config/travisci_rsa.enc -out .config/travisci_rsa -d
+- chmod 0600 .config/travisci_rsa
+- cp .config/travisci_rsa ~/.ssh/id_rsa
+- docker build -t wcrichto/scanner docker/ubuntu16.04-cuda8.0-cv3.1.0
+- docker run wcrichto/scanner /bin/bash -c "echo 'nice'"
+
+install:
+- sudo apt-get install doxygen
 
 script:
-  - echo "whut"
+- echo "whut"
+- ./scripts/publish-doxygen.sh
