--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
+# Warning: this is also used as the .dockerignore, and the matching patterns are
+# similar but **not quite** the same. If you add a file here, make sure that
+# the Docker build still works.
+
 build
 **/*.pyc
 thirdparty
 !thirdparty/CMakeLists.txt
-features/*/
