--- a/scanner/CMakeLists.txt
+++ b/scanner/CMakeLists.txt
@@ -4,5 +4,6 @@ add_subdirectory(eval)
 add_subdirectory(evaluators)
 add_subdirectory(server)
 add_subdirectory(parsers)
+add_subdirectory(pipelines)
 add_subdirectory(util)
 set(SCANNER_OBJS ${SCANNER_OBJS} PARENT_SCOPE)
