--- a/scanner/pipelines/CMakeLists.txt
+++ b/scanner/pipelines/CMakeLists.txt
@@ -2,13 +2,16 @@ set(SOURCE_FILES)
 
 if (BUILD_VIDEO_EVALUATORS AND
     BUILD_CAFFE_EVALUATORS AND
+    BUILD_CAFFE_INPUT_EVALUATORS AND
     BUILD_TRACKER_EVALUATORS AND
     BUILD_UTIL_EVALUATORS)
   list(APPEND SOURCE_FILES
     kcam_pipeline.cpp)
 endif()
 
-if (BUILD_VIDEO_EVALUATORS AND BUILD_CAFFE_EVALUATORS)
+if (BUILD_VIDEO_EVALUATORS AND
+    BUILD_CAFFE_EVALUATORS AND
+    BUILD_CAFFE_INPUT_EVALUATORS)
   list(APPEND SOURCE_FILES
     knn_pipeline.cpp)
 endif()
