Fixed cv dependencies for video evaluators and improved pipeline access errors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ project(Scanner)
 option(BUILD_VIDEO_EVALUATORS "" ON)
 option(BUILD_IMAGE_PROCESSING_EVALUATORS "" ON)
 option(BUILD_CAFFE_EVALUATORS "" OFF)
-option(BUILD_CAFFE_INPUT_TRANSFORMERS "" OFF)
+option(BUILD_CAFFE_INPUT_EVALUATORS "" OFF)
 option(BUILD_MOVIE_ANALYSIS_EVALUATORS "" OFF)
 option(BUILD_TRACKER_EVALUATORS "" OFF)
 option(BUILD_UTIL_EVALUATORS "" OFF)
@@ -74,6 +74,10 @@ if (CUDA_FOUND)
   include_directories(${CUDA_INCLUDE_DIRS})
 endif()
 
+if (BUILD_VIDEO_EVALUATORS)
+  list(APPEND OPENCV_DESIRED_COMPONENTS core highgui imgproc video videoio)
+endif()
+
 if (BUILD_CAFFE_EVALUATORS)
   find_package(Caffe REQUIRED)
   add_definitions(-DHAVE_CAFFE)
@@ -83,7 +87,7 @@ if (BUILD_CAFFE_EVALUATORS)
     add_definitions(-DCPU_ONLY)
   endif()
 
-  if (BUILD_CAFFE_INPUT_TRANSFORMERS)
+  if (BUILD_CAFFE_INPUT_EVALUATORS)
     # Requires opencv3
     list(APPEND OPENCV_DESIRED_COMPONENTS core highgui imgproc imgcodecs)
     if (CUDA_FOUND)
