Added Caffe default input evaluator

--- a/scanner/evaluators/CMakeLists.txt
+++ b/scanner/evaluators/CMakeLists.txt
@@ -19,6 +19,7 @@ if (BUILD_CAFFE_EVALUATORS)
     caffe/caffe_evaluator.cpp)
   if (BUILD_CAFFE_INPUT_EVALUATORS)
     list(APPEND SOURCE_FILES
+      caffe/default/default_input_evaluator.cpp
       caffe/vgg/vgg_cpu_input_transformer.cpp
       caffe/yolo/yolo_input_evaluator.cpp
       caffe/squeezenet/squeezenet_input_evaluator.cpp
