--- a/scanner/pipelines/CMakeLists.txt
+++ b/scanner/pipelines/CMakeLists.txt
@@ -26,6 +26,14 @@ if (BUILD_VIDEO_EVALUATORS AND BUILD_UTIL_EVALUATORS)
     effective_decode_rate_pipeline.cpp)
 endif()
 
+if (BUILD_VIDEO_EVALUATORS AND
+    BUILD_CAFFE_EVALUATORS AND
+    BUILD_CAFFE_INPUT_EVALUATORS AND
+    BUILD_UTIL_EVALUATORS)
+  list(APPEND SOURCE_FILES
+    dnn_rate_pipeline.cpp)
+endif()
+
 if (BUILD_VIDEO_EVALUATORS AND BUILD_IMAGE_PROCESSING_EVALUATORS)
   list(APPEND SOURCE_FILES
     simple_pipeline.cpp)
