--- a/features/googlenet.toml
+++ b/features/googlenet.toml
@@ -3,7 +3,10 @@
     weights = "features/googlenet/bvlc_googlenet.caffemodel"
     source = "https://github.com/BVLC/caffe/tree/master/models/bvlc_googlenet"
     input_layer = "data"
-    output_layers = ["loss3/classifier"]
+    output_layers = ["pool5/7x7_s1"]
+    input_width = 224
+    input_height = 224
+    normalize = true
 
     [net.input]
         dimensions = [
