--- a/features/mscnn.toml
+++ b/features/mscnn.toml
@@ -1,11 +1,8 @@
 [net]
-    model = "features/squeezenet/deploy.prototxt"
-    weights = "features/squeezenet/squeezenet_v1.0.caffemodel"
+    model = "features/mscnn/mscnn_deploy.prototxt"
+    weights = "features/mscnn/mscnn_kitti_trainval_2nd_iter_35000.caffemodel"
     input_layer = "data"
-    output_layers = ["pool10"]
-    input_width = 227
-    input_height = 227
-    normalize = true
+    output_layers = ["bbox_pred", "cls_pred", "proposals_score"]
 
     [net.input]
         dimensions = [
