--- a/features/resnet.toml
+++ b/features/resnet.toml
@@ -2,7 +2,7 @@
     model = "features/resnet/ResNet-50-deploy.prototxt"
     weights = "features/resnet/ResNet-50-model.caffemodel"
     source = "https://github.com/KaimingHe/deep-residual-networks"
-    input_layer = "data"
+    input_layers = ["data"]
     output_layers = ["fc1000"]
 
     [net.input]
