--- a/features/yolo.toml
+++ b/features/yolo.toml
@@ -1,7 +1,7 @@
 [net]
     model = "features/yolo/yolo_deploy.prototxt"
     weights = "features/yolo/yolo.caffemodel"
-    input_layer = "data"
+    input_layers = ["data"]
     output_layers = ["fc25"]
     input_width = 448
     input_height = 448
