--- a/features/mscnn.toml
+++ b/features/mscnn.toml
@@ -1,7 +1,7 @@
 [net]
     model = "features/mscnn/mscnn_deploy.prototxt"
     weights = "features/mscnn/mscnn_kitti_trainval_2nd_iter_35000.caffemodel"
-    input_layer = "data"
+    input_layer = ["data"]
     output_layers = ["bbox_pred", "cls_pred", "proposals_score"]
 
     [net.input]
