--- a/features/vgg_face.toml
+++ b/features/vgg_face.toml
@@ -1,7 +1,7 @@
 [net]
     model = "features/vgg_face_caffe/VGG_FACE_deploy.prototxt"
     weights = "features/vgg_face_caffe/VGG_FACE.caffemodel"
-    input_layer = "data"
+    input_layers = ["data"]
     output_layers = ["fc8"]
 
     [net.input]
