Working image decoder

--- a/scanner/evaluators/CMakeLists.txt
+++ b/scanner/evaluators/CMakeLists.txt
@@ -13,6 +13,11 @@ if (BUILD_VIDEO_EVALUATORS)
     video/encoder_evaluator.cpp)
 endif()
 
+if (BUILD_IMAGE_EVALUATORS)
+  list(APPEND SOURCE_FILES
+    image/image_decoder_evaluator.cpp)
+endif()
+
 if (BUILD_CAFFE_EVALUATORS)
   list(APPEND SOURCE_FILES
     caffe/net_descriptor.cpp
