--- a/scanner/pipelines/CMakeLists.txt
+++ b/scanner/pipelines/CMakeLists.txt
@@ -32,6 +32,11 @@ if (BUILD_VIDEO_EVALUATORS AND BUILD_UTIL_EVALUATORS)
     effective_decode_rate_pipeline.cpp)
 endif()
 
+if (BUILD_IMAGE_EVALUATORS AND BUILD_UTIL_EVALUATORS)
+  list(APPEND SOURCE_FILES
+    image_decode_rate_pipeline.cpp)
+endif()
+
 if (BUILD_VIDEO_EVALUATORS AND
     BUILD_CAFFE_EVALUATORS AND
     BUILD_CAFFE_INPUT_EVALUATORS AND
