Make Caffe take single inputs, add cpm (with hacky multi person)

--- a/scanner/evaluators/CMakeLists.txt
+++ b/scanner/evaluators/CMakeLists.txt
@@ -31,9 +31,9 @@ if (BUILD_CAFFE_EVALUATORS)
       caffe/facenet/facenet_input_evaluator.cpp
       caffe/faster_rcnn/faster_rcnn_parser_evaluator.cpp
       caffe/cpm/cpm_person_input_evaluator.cpp
-      caffe/cpm/cpm_person_parser_evaluator.cpp)
-      # caffe/cpm/cpm_input_evaluator.cpp
-      # caffe/cpm/cpm_parser_evaluator.cpp)
+      caffe/cpm/cpm_person_parser_evaluator.cpp
+      caffe/cpm/cpm_input_evaluator.cpp
+      caffe/cpm/cpm_parser_evaluator.cpp)
   endif()
 endif()
 
