Change evaluator interface to BatchedColumns

--- a/features/cpm.toml
+++ b/features/cpm.toml
@@ -17,7 +17,7 @@
         channel_ordering = [
             "blue",
             "green",
-            "red"
+            "red",
             "weight"
         ]
 
