--- a/features/resnet.toml
+++ b/features/resnet.toml
@@ -4,6 +4,8 @@
     source = "https://github.com/KaimingHe/deep-residual-networks"
     input_layers = ["data"]
     output_layers = ["fc1000"]
+    input_width = 224
+    input_height = 224
 
     [net.input]
         dimensions = [
