Added frame extractor and fixed movie evaluators

--- a/scanner/evaluators/CMakeLists.txt
+++ b/scanner/evaluators/CMakeLists.txt
@@ -45,7 +45,7 @@ endif()
 if (BUILD_MOVIE_ANALYSIS_EVALUATORS)
   list(APPEND SOURCE_FILES
     # movie_analysis/movie_evaluator.cpp
-    # movie_analysis/histogram_evaluator.cpp
+    movie_analysis/histogram_evaluator.cpp
     # movie_analysis/face_evaluator.cpp
     movie_analysis/optical_flow_evaluator.cpp
     #movie_analysis/camera_motion_evaluator.cpp)
