Fix NVIDIA decoder

--- a/scanner/util/CMakeLists.txt
+++ b/scanner/util/CMakeLists.txt
@@ -25,5 +25,6 @@ add_library(util OBJECT
   ${SOURCE_FILES})
 
 if (CUDA_FOUND)
-  cuda_add_library(util_cuda)
+  cuda_add_library(util_cuda
+    image.cu)
 endif()
