--- a/www/package.json
+++ b/www/package.json
@@ -16,6 +16,7 @@
     "css-loader": "^0.25.0",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.22.0",
+    "immutable": "^3.8.1",
     "node-sass": "^3.10.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
