Movie analysis scripts + misc fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,7 +130,7 @@ if (BUILD_MOVIE_ANALYSIS_EVALUATORS)
   set(DOPPIA_DIR /homes/wcrichto/rodrigob-doppia-2f93f2657960/src)
   set(OFDIS_DIR /homes/wcrichto/OF_DIS)
   if (OPENCV_MAJOR_VERSION EQUAL 3)
-      list(APPEND OPENCV_DESIRED_COMPONENTS core highgui imgproc objdetect video xfeatures2d sfm)
+      list(APPEND OPENCV_DESIRED_COMPONENTS core highgui imgproc objdetect video xfeatures2d)
       if (CUDA_FOUND)
           list(APPEND OPENCV_DESIRED_COMPONENTS cudaoptflow)
       endif()
