--- a/scanner/pipelines/CMakeLists.txt
+++ b/scanner/pipelines/CMakeLists.txt
@@ -5,7 +5,8 @@ if (BUILD_VIDEO_EVALUATORS)
    frame_extract_pipeline.cpp)
 endif()
 
-if (BUILD_VIDEO_EVALUATORS)
+if (BUILD_VIDEO_EVALUATORS AND
+    BULID_MEDIAN_EVALUATORS)
   list(APPEND SOURCE_FILES
    median_pipeline.cpp)
 endif()
