--- a/scanner/video/CMakeLists.txt
+++ b/scanner/video/CMakeLists.txt
@@ -7,8 +7,12 @@ if (CUDA_FOUND)
     nvidia/nvidia_video_decoder.cpp)
 endif()
 
-# list(APPEND SOURCE_FILES
-#   intel/intel_video_decoder.cpp)
+if (MFX_FOUND)
+  add_definitions(-DHAVE_INTEL_VIDEO_HARDWARE)
+  list(APPEND SOURCE_FILES
+    intel/intel_video_decoder.cpp)
+endif()
+
 list(APPEND SOURCE_FILES
   software/software_video_decoder.cpp)
 
